fix: mobile testimonial info clipping

--- a/src/Components/home/testimonials/index.css
+++ b/src/Components/home/testimonials/index.css
@@ -118,7 +118,7 @@ Reviews
 @media screen and (max-width: 692px) {
   .info {
     margin-bottom: 0.75rem;
-    height: 150px;
+    min-height: 160px;
   }
 }
 
